--- a/subversion/po/sv.po
+++ b/subversion/po/sv.po
@@ -43,7 +43,7 @@ msgstr ""
 "Project-Id-Version: subversion 1.3\n"
 "Report-Msgid-Bugs-To: dev@subversion.tigris.org\n"
 "POT-Creation-Date: 2006-03-13 09:39+0100\n"
-"PO-Revision-Date: 2005-12-21 21:35+0100\n"
+"PO-Revision-Date: 2006-03-13 09:46+0100\n"
 "Last-Translator: Subversion Developers <dev@subversion.tigris.org>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -1369,8 +1369,7 @@ msgstr ""
 "Visa status för filer och kataloger i en arbetskopia.\n"
 "användning: status [SÖKVÄG...]\n"
 "\n"
-"  Utan argument visas endast lokala ändringar (kräver inte "
-"nätverksåtkomst).\n"
+"  Utan argument visas endast lokala ändringar (kräver inte nätverksåtkomst).\n"
 "  Om flaggan -u anges, visas dessutom revisioner i arbetskopian och\n"
 "  information om ändringar på servern.\n"
 "  Om -v anges, visas fullständig revisionsinformation för varje objekt.\n"
@@ -1423,8 +1422,7 @@ msgstr ""
 "  De återstående fälten har varierande längd och avgränsas med mellanslag:\n"
 "    Arbetskopians revision (med -u eller -v)\n"
 "    Revision och författare för senaste arkivering (med -v)\n"
-"    Arbetskopians sökväg står alltid sist, så att den kan innehålla "
-"mellanslag.\n"
+"    Arbetskopians sökväg står alltid sist, så att den kan innehålla mellanslag.\n"
 "\n"
 "  Exempel på vad som kan visas:\n"
 "    svn status wc\n"
@@ -4220,9 +4218,9 @@ msgid "The root directory cannot be deleted"
 msgstr "Rotkatalogen kan inte raderas"
 
 #: libsvn_fs_base/tree.c:2935 libsvn_fs_fs/tree.c:1964
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot copy between two different filesystems ('%s' and '%s')."
-msgstr "Kan inte jämföra egenskapsvärde mellan två olika filsystem"
+msgstr "Kan inte kopiera mellan två olika filsystem (\"%s\" och \"%s\")"
 
 #: libsvn_fs_base/tree.c:2944 libsvn_fs_fs/tree.c:1970
 msgid "Copy from mutable tree not currently supported"
