Fix various cosmetic and documentation errors.
Patch by: Ed Price <ed.price@gmail.com>

* contrib/client-side/svn_export_empty_files.py
* contrib/client-side/svncopy.README
* contrib/hook-scripts/svn2rss.py
* notes/fs-improvements.txt
* notes/wc-improvements
* subversion/bindings/java/README
* subversion/bindings/java/javahl/src/org/tigris/subversion/javahl/tests/SVNTests.java
* subversion/include/mod_dav_svn.h
* subversion/include/svn_auth.h
* subversion/include/svn_types.h
* subversion/include/svn_wc.h
* subversion/libsvn_client/client.h
* subversion/libsvn_fs_base/notes/fs-history
* subversion/libsvn_wc/adm_ops.c
* subversion/libsvn_wc/entries.c
* subversion/libsvn_wc/entries.h
* subversion/libsvn_wc/log.c
* subversion/svn/main.c
* subversion/svnserve/serve.c
* subversion/tests/cmdline/svntest/tree.py
* www/faq.html
  Fix typos, spelling, punctuation and wording in documentation.
  Fix whitespace.

* INSTALL
* build/win32/vc6-build.bat.in
* subversion/bindings/java/javahl/src/org/tigris/subversion/javahl/tests/BasicTests.java
* subversion/tests/README
* tools/test-scripts/svntest/examples/debian-gnulinux-shared/mod_dav_svn.conf
* tools/test-scripts/svntest/mod_dav_svn.conf
  Fix test directory name in documentation and examples, after r17718 moved it.

* notes/releases.txt: Remove obsolete text.  Fix test directory name.
  Add 'make check-swig-py'.  Fix whitespace.

--- a/subversion/bindings/java/README
+++ b/subversion/bindings/java/README
@@ -40,7 +40,7 @@ II.    BUILDING
 III.   INTERFACES
 
        The interface code exists to present an API which is familiar
-       Subversion Java programmers regardless of the binding
+       to Subversion Java programmers regardless of the binding
        implementation method.  You can find it under the org/
        sub-directory.  The API is likely to be adjusted to more
        closely align with the JavaHL implementation.  If that doesn't
