--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
 Version 1.3.1
-(xx March 2006, from /branches/1.3.x)
+(25 March 2006, from /branches/1.3.x)
 http://svn.collab.net/repos/svn/tags/1.3.1
 
  User-visible-changes:
