In "svnadmin" tests, don't use "XFail" for testing an operation that fails when Subversion is working correctly, and other improvements.
* subversion/tests/README
  Emphasise what XFAIL is not to be used for.

* subversion/tests/cmdline/svnadmin_tests.py
  (load_and_verify_dumpstream): Enable use of SVNAnyOutput.  Don't try
    to verify the result if an error was expected.
  (clean_dumpfile): Convert from a variable to a function so that the
    data cannot be modified in place, which was happening before (due to
    only shallow copies being made of it).
  (extra_blockcontent): Remove an obsolete comment.  Insert extra data
    earlier in the stream to check that processing continues after it.
  (inconsistent_headers): Expect an error in loading the dump stream.
  (test_list): Remove "XFail" from "inconsistent_headers".

--- a/subversion/tests/README
+++ b/subversion/tests/README
@@ -80,6 +80,9 @@ XPASS (uneXpected PASS).
 The purpose of XFAIL tests is to confirm that a known bug still
 exists. When you see such a test uneXpectedly PASS, you've probably
 fixed the bug it tests for, even if that wasn't your intention. :-)
+XFAIL is not to be used as a way of testing a deliberately invalid
+operation that is expected to fail when Subversion is working
+correctly, nor as a place-holder for a test that is not yet written.
 
 Each test function conforms to the svn_test_driver_t prototype:
 
