--- a/INSTALL
+++ b/INSTALL
@@ -851,8 +851,8 @@ II.   INSTALLATION
     copy the client tests into the release test area.
 
     C:>cd src-%DIR%
-    C:>mkdir Release\subversion\tests\svn
-    C:>xcopy /S /Y subversion\tests\svn Release\subversion\tests\svn
+    C:>mkdir Release\subversion\tests\cmdline
+    C:>xcopy /S /Y subversion\tests\cmdline Release\subversion\tests\cmdline
 
     If the server dso modules  have been built then copy the dso files and
     dlls into the Apache modules directory.
