--- a/subversion/tests/cmdline/README
+++ b/subversion/tests/cmdline/README
@@ -30,13 +30,14 @@ script:
 
    $ ./basic_tests.py
 
-Invoke with one numeric argument to run that particular test:
+Invoke with one or more numeric arguments to run those particular tests:
 
-   $ ./basic_tests.py 7
+   $ ./basic_tests.py 7 13 17
 
-And invoke with the "list" argument to show a list of all tests in
-that script:
+And invoke with the "list" subcommand to list information about some
+or all tests available in that script:
 
+   $ ./basic_tests.py list 2 3 4
    $ ./basic_tests.py list
 
 Note: if you are building Subversion in a directory other than the source
