--- a/contrib/client-side/svn2cl/NEWS
+++ b/contrib/client-side/svn2cl/NEWS
@@ -1,3 +1,19 @@
+changes from 0.6 to 0.7
+-----------------------
+
+* performance improvements (svn2cl is about 40% faster when not using the
+  --group-by-day option plus a couple of percent when using the --authors
+  option)
+* path to strip from file names is now automatically determined (works with
+  svn>=1.3.0)
+* colon separated authors file is now supported
+* html output improvements
+* added --reparagraph option that re-wraps text inside paragraphs
+* added --separate-daylogs option that inserts newlines between log messages
+  when --group-by-day is used
+* manual page improvements
+
+
 changes from 0.5 to 0.6
 -----------------------
 
