--- a/contrib/client-side/svn2cl/TODO
+++ b/contrib/client-side/svn2cl/TODO
@@ -1,9 +1,9 @@
-* remove paths that do not have the specified prefix
 * flag deleted files (<path action="D"...>)
 * look at more command line compatibility with cvs2cl (e.g. -r, --revisions, --show-dead, --no-wrap, --hide-filenames, --lines-modified)
-* only group entries if --group-by-day is given
 * support more xslt processors
 * group changes per autor per day
 * svn2rss?
 * if an authors.xml file exists in the current directory automatically pick it up
 * improve performance of processing authors.xml
+* fix awk magic to not break with spaces in repository names
+* find better names for options
